vbnc/vbnc/tests/Errors/32006-5.vb
Imports System
Class T
    Const M_String As uint64 = "c"c
End Class